# Random-Code

./: .gitignore  README.md
3D rendering/src/: Matrix.java  Point.java  Render3D.java  Vector.java
MineSweeper/src/: MineSweeper.java  MineSweeperMain.java  MineSweeperState.java
PlanetAttack/: Tick math.mw
Sudoku/: BLANK.sdk  easy1.sdk  medium.sdk  worlds_hardest.sdk  worlds_hardest2.sdk
rpg/: CMakeLists.txt  note.txt
rpg/include/engine/: aabb.hpp  constants.hpp  drawable_debug.hpp  entity.hpp  game_object.hpp  input_handler.hpp  mobile_object.hpp  player.hpp  tile.hpp  window_singleton.hpp  world.hpp
rpg/include/engine/game_state/: game_state_manager.hpp
rpg/include/engine/game_state/states/: game_state.hpp  loading_state.hpp  startup_state.hpp  world_state.hpp
rpg/include/engine/ui/: ui_manager.hpp
rpg/include/engine/ui/elements/: button.hpp  button_list.hpp  ui_element.hpp
rpg/include/resources/: animation.hpp  game_registry.hpp  resource_manager.hpp  vertex_quad.hpp  weighted_texture.hpp
rpg/include/resources/connected_textures/: blob_texture.hpp  connected_texture.hpp  fence_texture.hpp
rpg/resources/: logo.xcf
rpg/resources/entity/player/: player_idle_down.animation.json  player_walk_left_right.animation.json
rpg/resources/object/: rock.object.json
rpg/resources/tile/: dirt.variations.json  grass.variations.json
rpg/src/: main.cpp
rpg/src/engine/: aabb.cpp  entity.cpp  game_object.cpp  input_handler.cpp  mobile_object.cpp  player.cpp  tile.cpp  world.cpp
rpg/src/engine/game_state/: game_state_manager.cpp
rpg/src/engine/game_state/states/: game_state.cpp  loading_state.cpp  startup_state.cpp  world_state.cpp
rpg/src/engine/ui/: ui_manager.cpp
rpg/src/engine/ui/elements/: button.cpp  button_list.cpp  ui_element.cpp
rpg/src/resources/: animation.cpp  game_registry.cpp  resource_manager.cpp  vertex_quad.cpp  weighted_texture.cpp
rpg/src/resources/connected_textures/: blob_texture.cpp  connected_texture.cpp  fence_texture.cpp
(+33 files in other folders)
